--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.14.4",
-    "@astrojs/check": "^0.9.3",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/svelte": "^5.7.2",
+    "@astrojs/tailwind": "^5.1.2",
+    "@fontsource/geist-sans": "^5.1.0",
+    "@fontsource/gothic-a1": "^5.1.0",
+    "astro": "^4.16.6",
+    "clsx": "^2.1.1",
+    "svelte": "^4.2.18",
+    "tailwind-merge": "^2.5.2",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   }
 }
