--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "$lib/*": ["./src/*"]
-    }
+    },
+    "types": ["unplugin-icons/types/astro"]
   }
 }
