--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/svelte": "^5.7.2",
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource/geist-sans": "^5.1.0",
@@ -22,5 +23,10 @@
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@iconify-json/devicon": "^1.2.4",
+    "@iconify-json/logos": "^1.2.3",
+    "unplugin-icons": "^0.19.3"
   }
 }
