--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@iconify-json/devicon": "^1.2.4",
     "@iconify-json/logos": "^1.2.3",
+    "@iconify-json/lucide": "^1.2.10",
     "unplugin-icons": "^0.19.3"
   }
 }
