--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/cloudflare": "^11.2.0",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/svelte": "^5.7.2",
     "@astrojs/tailwind": "^5.1.2",
