--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "dev:pages": "wrangler pages dev dist",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
@@ -29,6 +30,7 @@
     "@iconify-json/devicon": "^1.2.4",
     "@iconify-json/logos": "^1.2.3",
     "@iconify-json/lucide": "^1.2.10",
-    "unplugin-icons": "^0.19.3"
+    "unplugin-icons": "^0.19.3",
+    "wrangler": "^3.86.0"
   }
 }
