--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@astrojs/tailwind": "^6.0.0",
     "@fontsource/geist-sans": "^5.1.0",
     "@fontsource/gothic-a1": "^5.1.0",
+    "@tailwindcss/vite": "^4.0.1",
     "astro": "^5.2.1",
     "clsx": "^2.1.1",
     "svelte": "^5.19.6",
-    "tailwind-merge": "^2.5.2",
-    "tailwind-variants": "^0.2.1",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
+    "tailwind-merge": "^3.0.1",
+    "tailwind-variants": "^0.3.1",
+    "tailwindcss": "^4.0.1",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@iconify-json/devicon": "^1.2.4",
