--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/cloudflare": "^12.2.1",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/svelte": "^7.0.4",
-    "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/cloudflare": "^12.3.1",
+    "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/svelte": "^7.0.8",
+    "@astrojs/tailwind": "^6.0.2",
     "@fontsource/geist-sans": "^5.1.0",
     "@fontsource/gothic-a1": "^5.1.0",
     "@tailwindcss/vite": "^4.0.1",
-    "astro": "^5.2.1",
+    "astro": "^5.5.5",
     "clsx": "^2.1.1",
     "svelte": "^5.19.6",
     "tailwind-merge": "^3.0.1",
@@ -33,5 +33,6 @@
     "@iconify-json/lucide": "^1.2.10",
     "unplugin-icons": "^0.19.3",
     "wrangler": "^3.86.0"
-  }
+  },
+  "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6"
 }
