--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@astrojs/cloudflare": "^12.5.2",
     "@astrojs/sitemap": "^3.3.1",
     "@astrojs/svelte": "^7.0.13",
+    "@fontsource-variable/manrope": "^5.2.5",
     "@fontsource/geist-sans": "^5.2.5",
     "@fontsource/gothic-a1": "^5.2.5",
     "@tailwindcss/vite": "^4.1.6",
+    "animejs": "^4.0.2",
     "astro": "^5.7.12",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "svelte": "^5.28.2",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^1.0.0",
@@ -30,6 +33,7 @@
     "@iconify-json/devicon": "^1.2.23",
     "@iconify-json/logos": "^1.2.4",
     "@iconify-json/lucide": "^1.2.41",
+    "@iconify-json/mdi": "^1.2.3",
     "unplugin-icons": "^22.1.0",
     "wrangler": "^4.14.4"
   },
