remove old pages, fix: cloudflare deploy

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,13 @@
 {
   "name": "portfolio",
   "compatibility_date": "2025-06-08",
+  "main": "./dist/_worker.js/index.js",
+  "compatibility_flags": ["nodejs_compat"],
   "assets": {
+    "binding": "ASSETS",
     "directory": "./dist"
+  },
+  "observability": {
+    "enabled": true
   }
 }
