add mdx, animejs article

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/cloudflare": "^12.6.1",
+    "@astrojs/mdx": "^4.3.2",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.2",
     "@astrojs/svelte": "^7.1.0",
@@ -20,11 +21,11 @@
     "@fontsource/geist-sans": "^5.2.5",
     "@fontsource/gothic-a1": "^5.2.5",
     "@tailwindcss/vite": "^4.1.6",
-    "animejs": "^4.0.2",
+    "animejs": "^4.1.2",
     "astro": "^5.12.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "svelte": "^5.28.2",
+    "svelte": "^5.37.2",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.6",
