--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "prettier -w ./src"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -36,6 +37,8 @@
     "@iconify-json/logos": "^1.2.4",
     "@iconify-json/lucide": "^1.2.41",
     "@iconify-json/mdi": "^1.2.3",
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1",
     "unplugin-icons": "^22.1.0",
     "wrangler": "^4.14.4"
   },
