--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier -w ./src"
+    "format": "prettier -w ./src",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -33,12 +34,17 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@iconify-json/devicon": "^1.2.45",
     "@iconify-json/logos": "^1.2.9",
     "@iconify-json/lucide": "^1.2.69",
     "@iconify-json/mdi": "^1.2.3",
+    "eslint": "^9.37.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-svelte": "^3.12.4",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
+    "typescript-eslint": "^8.46.0",
     "unplugin-icons": "^22.4.2",
     "wrangler": "^4.42.2"
   },
