chore: update wrangler

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,9 +5,17 @@
   "compatibility_flags": ["nodejs_compat"],
   "assets": {
     "binding": "ASSETS",
-    "directory": "./dist"
+    "directory": "./dist",
   },
   "observability": {
-    "enabled": true
-  }
+    "enabled": true,
+  },
+  "routes": [
+    {
+      "pattern": "brandonma.dev",
+      "zone_name": "brandonma.dev",
+      "custom_domain": true,
+    },
+  ],
+  "preview_urls": false,
 }
